Added RAW loading w/ thumbnails + progbar

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@electron-forge/maker-rpm": "^7.8.3",
     "@electron-forge/maker-squirrel": "^7.8.3",
     "@electron-forge/maker-zip": "^7.8.3",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.8.3",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.9.0",
     "@electron-forge/plugin-fuses": "^7.8.3",
     "@electron-forge/plugin-vite": "^7.8.3",
     "@electron/fuses": "^1.8.0",
@@ -33,9 +33,11 @@
   },
   "dependencies": {
     "async": "^3.2.6",
+    "electron-progressbar": "^2.2.1",
     "electron-squirrel-startup": "^1.0.1",
     "exif-reader": "^2.0.2",
     "exifreader": "^4.31.2",
+    "exiftool-vendored": "^30.5.0",
     "sharp": "^0.34.3",
     "tiff": "^7.1.1",
     "tiff.js": "^1.0.0",
